WebCore::fillWithEmptyClients adopts new empty clients before leaking their pointers https://bugs.webkit.org/show_bug.cgi?id=122945

Reviewed by Anders Carlsson.

* loader/EmptyClients.cpp:
(WebCore::fillWithEmptyClients): Store the static empty clients as NeverDestroyed, rather than
adopting the pointer of each heap-allocated object and then immediately leaking that pointer.


Canonical link: https://commits.webkit.org/141253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157807 268f45cc-cd09-0410-ab3c-d52691b4dbfc